--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="visual">
             <div class="bg">
             </div>
-            <img src="/image/burgerMain.png" alt="Burger"/>
+            <img src="./image/burgerMain.png" alt="Burger"/>
         </div>
     </div>
 </div>
@@ -47,7 +47,7 @@
 <div class="footer">
     <div class="container">
         <div class="item">
-            <img class="logo" src="/image/logo.png" alt="Logo"/>
+            <img class="logo" src="./image/logo.png" alt="Logo"/>
         </div>
         <div class="item">
             <h2>основные ссылки</h2>
